fixed z-index for modal dialog

--- a/sass/core.scss
+++ b/sass/core.scss
@@ -1294,6 +1294,7 @@
 }
 .yotpo-modal{
   position: fixed;
+  z-index: 800;
   left: 0;
   top: 0;
   width: 100%;
